--- a/app/src/main/res/layout/dialog_harmonica_notes.xml
+++ b/app/src/main/res/layout/dialog_harmonica_notes.xml
@@ -4,10 +4,26 @@
     android:background="@color/white"
     android:padding="@dimen/bu1">
 
+    <EditText
+        android:id="@+id/word_field"
+        android:layout_width="@dimen/bu10"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:hint="@string/hint_word"
+        android:imeOptions="actionDone"
+        android:inputType="text"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_30px" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_harmonica_notes"
         android:layout_width="wrap_content"
+        android:paddingLeft="1dp"
+        android:paddingRight="1dp"
+        android:background="@drawable/grey_bordered_rounded_shape"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/word_field"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/bu4" />
 
 </RelativeLayout>
