--- a/app/src/main/res/layout/list_item_note.xml
+++ b/app/src/main/res/layout/list_item_note.xml
@@ -5,29 +5,29 @@
     <LinearLayout
         android:id="@+id/view_note"
         android:layout_width="@dimen/bu4"
-        android:layout_height="@dimen/bu6"
-        android:orientation="vertical"
+        android:layout_height="@dimen/bu5_5"
+        android:layout_margin="@dimen/bu0_25"
+        android:background="@drawable/white_rounded_shape_selector"
         android:gravity="center"
-        android:background="@drawable/white_bordered_rounded_shape"
-        android:clickable="true">
+        android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/text_note"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_48px" />
+        <TextView
+            android:id="@+id/text_note"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_48px" />
 
-            <TextView
-                android:id="@+id/text_word"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="every"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_20px" />
+        <TextView
+            android:id="@+id/text_word"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="every"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_20px" />
     </LinearLayout>
 
 </RelativeLayout>
