--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,18 @@
     android:background="@mipmap/image_background"
     tools:context="com.mivas.myharmonicasongs.MainActivity">
 
+    <TextView
+        android:id="@+id/text_no_songs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="@dimen/bu2"
+        android:layout_marginRight="@dimen/bu2"
+        android:gravity="center"
+        android:text="@string/no_songs"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_42px" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_songs"
         android:layout_width="match_parent"
