--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -6,6 +6,18 @@
     android:background="@color/greyDD"
     tools:context="com.mivas.myharmonicasongs.SongActivity">
 
+    <TextView
+        android:id="@+id/text_no_notes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="@dimen/bu2"
+        android:layout_marginRight="@dimen/bu2"
+        android:gravity="center"
+        android:text="@string/no_notes"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_42px" />
+
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
