--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="greyDD">#DDDDDD</color>
     <color name="greyEE">#EEEEEE</color>
     <color name="greyAA">#AAAAAA</color>
+    <color name="grey77">#777777</color>
+    <color name="gold">#FFD700</color>
 </resources>
