--- a/app/src/main/res/layout/list_item_song.xml
+++ b/app/src/main/res/layout/list_item_song.xml
@@ -23,14 +23,14 @@
                 android:layout_height="@dimen/bu3"
                 android:layout_centerInParent="true"
                 android:scaleType="fitXY"
-                android:src="@mipmap/icon_note" />
+                android:src="@drawable/icon_note" />
         </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginRight="@dimen/bu5"
+            android:layout_marginRight="@dimen/bu3"
             android:layout_toRightOf="@+id/icon_song"
             android:orientation="vertical">
 
@@ -46,26 +46,27 @@
             <TextView
                 android:id="@+id/text_author"
                 android:layout_width="wrap_content"
-                android:textStyle="italic"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textColor="@color/grey77"
-                android:textSize="@dimen/text_size_26px" />
+                android:textSize="@dimen/text_size_26px"
+                android:textStyle="italic" />
         </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/button_more"
-            android:layout_width="@dimen/bu5"
+            android:layout_width="@dimen/bu3"
             android:layout_height="@dimen/bu5"
             android:layout_alignParentRight="true"
             android:clickable="true">
 
             <ImageView
-                android:layout_width="@dimen/bu2"
-                android:layout_height="@dimen/bu2"
+                android:layout_width="@dimen/bu1_5"
+                android:layout_height="@dimen/bu1_5"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/bu0_33"
                 android:src="@drawable/selector_dots" />
         </RelativeLayout>
 
