--- a/app/src/main/res/layout/dialog_note_picker.xml
+++ b/app/src/main/res/layout/dialog_note_picker.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@mipmap/image_background"
+    android:background="@drawable/image_background"
     android:padding="@dimen/bu1">
 
     <RelativeLayout
