Added bent notes

--- a/app/src/main/res/layout/dialog_note_picker.xml
+++ b/app/src/main/res/layout/dialog_note_picker.xml
@@ -1,57 +1,70 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/image_background"
-    android:padding="@dimen/bu1">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/bu4">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/image_background"
+        android:padding="@dimen/bu1">
 
-        <TextView
-            android:id="@+id/text_syllable"
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/bu4">
+
+            <TextView
+                android:id="@+id/text_syllable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/text_syllable"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_30px" />
+
+            <EditText
+                android:id="@+id/field_word"
+                android:layout_width="@dimen/bu6"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/bu0_5"
+                android:layout_toRightOf="@+id/text_syllable"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_30px" />
+        </RelativeLayout>
+
+
+        <Button
+            android:id="@+id/button_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/bu4"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="right"
+            android:background="@drawable/selector_button_generic"
+            android:paddingLeft="@dimen/bu1"
+            android:paddingRight="@dimen/bu1"
+            android:text="@string/button_delete"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_30px" />
+
+        <CheckBox
+            android:id="@+id/checkbox_show_bendings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="@string/text_syllable"
+            android:layout_marginTop="@dimen/bu4"
+            android:text="@string/checkbox_show_bendings"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_30px" />
 
-        <EditText
-            android:id="@+id/field_word"
-            android:layout_width="@dimen/bu6"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_harmonica_notes"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/bu0_5"
-            android:layout_toRightOf="@+id/text_syllable"
-            android:imeOptions="actionDone"
-            android:inputType="text"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_30px" />
+            android:layout_below="@id/checkbox_show_bendings"
+            android:layout_centerHorizontal="true"
+            android:paddingLeft="1dp"
+            android:paddingRight="1dp" />
+
     </RelativeLayout>
-
-
-    <Button
-        android:id="@+id/button_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/bu4"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="right"
-        android:background="@drawable/selector_button_generic"
-        android:paddingLeft="@dimen/bu1"
-        android:paddingRight="@dimen/bu1"
-        android:text="@string/button_delete"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_30px" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_harmonica_notes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/bu5"
-        android:background="@drawable/shape_harmonica"
-        android:paddingLeft="1dp"
-        android:paddingRight="1dp" />
-
-</RelativeLayout>
+</ScrollView>
