--- a/app/src/main/res/layout/list_item_note_picker.xml
+++ b/app/src/main/res/layout/list_item_note_picker.xml
@@ -11,44 +11,143 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/text_upper_note"
+            android:id="@+id/text_upper_note_bend2"
             android:layout_width="@dimen/bu3"
             android:layout_height="@dimen/bu3"
             android:layout_marginTop="@dimen/bu0_5"
             android:background="@drawable/selector_harmonica_note"
             android:clickable="true"
             android:gravity="center"
-            android:text="4"
             android:textColor="@color/black"
-            android:textSize="@dimen/text_size_48px" />
+            android:textSize="@dimen/text_size_48px"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/text_upper_note_bend1"
+            android:layout_width="@dimen/bu3"
+            android:layout_height="@dimen/bu3"
+            android:layout_marginBottom="@dimen/bu0_5"
+            android:layout_marginTop="@dimen/bu0_5"
+            android:background="@drawable/selector_harmonica_note"
+            android:clickable="true"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_48px"
+            android:visibility="gone" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/bu2_5"
-            android:layout_marginBottom="@dimen/bu0_5"
-            android:layout_marginTop="@dimen/bu0_5"
-            android:background="@color/greyAA">
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/greyEE"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black" />
+
+                <TextView
+                    android:id="@+id/text_upper_note"
+                    android:layout_width="@dimen/bu3"
+                    android:layout_height="@dimen/bu3"
+                    android:layout_marginTop="@dimen/bu0_5"
+                    android:background="@drawable/selector_harmonica_note"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_48px" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/bu2_5"
+                    android:layout_marginBottom="@dimen/bu0_5"
+                    android:layout_marginTop="@dimen/bu0_5"
+                    android:background="@color/greyAA">
+
+                    <View
+                        android:layout_width="@dimen/bu2"
+                        android:layout_height="@dimen/bu2"
+                        android:layout_centerInParent="true"
+                        android:layout_marginBottom="@dimen/bu0_5"
+                        android:layout_marginTop="@dimen/bu0_5"
+                        android:background="@color/black" />
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/text_lower_note"
+                    android:layout_width="@dimen/bu3"
+                    android:layout_height="@dimen/bu3"
+                    android:layout_marginBottom="@dimen/bu0_5"
+                    android:background="@drawable/selector_harmonica_note"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_48px" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black" />
+            </LinearLayout>
 
             <View
-                android:layout_width="@dimen/bu2"
-                android:layout_height="@dimen/bu2"
-                android:layout_centerInParent="true"
-                android:layout_marginBottom="@dimen/bu0_5"
-                android:layout_marginTop="@dimen/bu0_5"
+                android:id="@+id/border_left"
+                android:layout_width="1dp"
+                android:layout_height="@dimen/bu10_5"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:background="@color/black" />
+
+            <View
+                android:id="@+id/border_right"
+                android:layout_width="1dp"
+                android:layout_height="@dimen/bu10_5"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:background="@color/black" />
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/text_lower_note"
+            android:id="@+id/text_lower_note_bend1"
+            android:layout_width="@dimen/bu3"
+            android:layout_height="@dimen/bu3"
+            android:layout_marginBottom="@dimen/bu0_5"
+            android:layout_marginTop="@dimen/bu0_5"
+            android:background="@drawable/selector_harmonica_note"
+            android:clickable="true"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_48px"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/text_lower_note_bend2"
             android:layout_width="@dimen/bu3"
             android:layout_height="@dimen/bu3"
             android:layout_marginBottom="@dimen/bu0_5"
             android:background="@drawable/selector_harmonica_note"
             android:clickable="true"
             android:gravity="center"
-            android:text="-4"
             android:textColor="@color/black"
-            android:textSize="@dimen/text_size_48px" />
+            android:textSize="@dimen/text_size_48px"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/text_lower_note_bend3"
+            android:layout_width="@dimen/bu3"
+            android:layout_height="@dimen/bu3"
+            android:layout_marginBottom="@dimen/bu0_5"
+            android:background="@drawable/selector_harmonica_note"
+            android:clickable="true"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_48px"
+            android:visibility="gone" />
 
     </LinearLayout>
 
