--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="colorAccent">#8832ba</color>
 
     <color name="white">#FFFFFF</color>
-    <color name="white_50">#80FFFFFF</color>
+    <color name="white_15">#26FFFFFF</color>
+    <color name="black_30">#4A000000</color>
     <color name="black">#000000</color>
     <color name="purple">#8832ba</color>
     <color name="dark_purple">#642589</color>
