--- a/app/src/main/res/layout/list_item_note_picker.xml
+++ b/app/src/main/res/layout/list_item_note_picker.xml
@@ -18,7 +18,6 @@
             android:background="@drawable/selector_harmonica_note"
             android:clickable="true"
             android:gravity="center"
-            android:textColor="@color/black"
             android:textSize="@dimen/text_size_48px"
             android:visibility="gone" />
 
@@ -31,7 +30,6 @@
             android:background="@drawable/selector_harmonica_note"
             android:clickable="true"
             android:gravity="center"
-            android:textColor="@color/black"
             android:textSize="@dimen/text_size_48px"
             android:visibility="gone" />
 
@@ -59,7 +57,6 @@
                     android:background="@drawable/selector_harmonica_note"
                     android:clickable="true"
                     android:gravity="center"
-                    android:textColor="@color/black"
                     android:textSize="@dimen/text_size_48px" />
 
                 <RelativeLayout
@@ -86,7 +83,6 @@
                     android:background="@drawable/selector_harmonica_note"
                     android:clickable="true"
                     android:gravity="center"
-                    android:textColor="@color/black"
                     android:textSize="@dimen/text_size_48px" />
 
                 <View
@@ -98,7 +94,7 @@
             <View
                 android:id="@+id/border_left"
                 android:layout_width="1dp"
-                android:layout_height="@dimen/bu10_5"
+                android:layout_height="128dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:background="@color/black" />
@@ -121,7 +117,6 @@
             android:background="@drawable/selector_harmonica_note"
             android:clickable="true"
             android:gravity="center"
-            android:textColor="@color/black"
             android:textSize="@dimen/text_size_48px"
             android:visibility="gone" />
 
@@ -133,7 +128,6 @@
             android:background="@drawable/selector_harmonica_note"
             android:clickable="true"
             android:gravity="center"
-            android:textColor="@color/black"
             android:textSize="@dimen/text_size_48px"
             android:visibility="gone" />
 
@@ -145,7 +139,6 @@
             android:background="@drawable/selector_harmonica_note"
             android:clickable="true"
             android:gravity="center"
-            android:textColor="@color/black"
             android:textSize="@dimen/text_size_48px"
             android:visibility="gone" />
 
