--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_marginRight="@dimen/bu2"
         android:gravity="center"
         android:text="@string/no_songs"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="@dimen/text_size_42px" />
 
     <android.support.v7.widget.RecyclerView
