--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -32,7 +32,7 @@
             android:layout_marginRight="@dimen/bu2"
             android:gravity="center"
             android:text="@string/no_notes"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="@dimen/text_size_42px" />
 
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
