--- a/app/src/main/res/layout/dialog_song.xml
+++ b/app/src/main/res/layout/dialog_song.xml
@@ -5,6 +5,14 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/text_title"
+        android:layout_width="wrap_content"
+        android:textColor="@color/colorPrimary"
+        android:layout_gravity="center_horizontal"
+        android:textSize="@dimen/text_size_40px"
+        android:layout_height="wrap_content" />
+
     <EditText
         android:id="@+id/field_title"
         android:textSize="@dimen/text_size_30px"
