--- a/app/src/main/res/menu/menu_song_options.xml
+++ b/app/src/main/res/menu/menu_song_options.xml
@@ -1,12 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_edit"
+        android:id="@+id/action_edit_song"
         android:icon="@drawable/icon_edit"
         android:title="@string/menu_edit"
         app:actionLayout="@layout/list_item_menu" />
     <item
-        android:id="@+id/action_delete"
+        android:id="@+id/action_delete_song"
         android:icon="@drawable/icon_delete"
         android:title="@string/menu_delete"
         app:actionLayout="@layout/list_item_menu" />
