--- a/app/src/main/res/menu/menu_note_options.xml
+++ b/app/src/main/res/menu/menu_note_options.xml
@@ -25,4 +25,19 @@
         android:icon="@drawable/icon_paste"
         android:title="@string/menu_paste_row"
         app:actionLayout="@layout/list_item_menu" />
+    <item
+        android:id="@+id/action_add_section"
+        android:icon="@drawable/icon_plus2"
+        android:title="@string/menu_add_section"
+        app:actionLayout="@layout/list_item_menu" />
+    <item
+        android:id="@+id/action_edit_section"
+        android:icon="@drawable/icon_edit"
+        android:title="@string/menu_edit_section"
+        app:actionLayout="@layout/list_item_menu" />
+    <item
+        android:id="@+id/action_delete_section"
+        android:icon="@drawable/icon_delete2"
+        android:title="@string/menu_delete_section"
+        app:actionLayout="@layout/list_item_menu" />
 </menu>
